updated the api-scripts files to enable packaging. You can now use python setup.py bdist_rpm in the api-scripts directory to build an RPM of the scripts, deploying into /usr/bin
TODO: still some files deployed into /usr/docs, which I can't seem to stop.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,8 @@
 [bdist_rpm]
 release = 1
 packager = Stuart Sears <sjs@redhat.com>
-doc_files = scripts/docs/
+requires = python-rhnapi > 5.4
+group    = Applications/RHN
+doc_files = templates/ README.scripts
+
 
