BUGFIX: fixed customer-specific entries in api-scripts/templates/channel-errata.conf

--- a/templates/channel-errata.conf
+++ b/templates/channel-errata.conf
@@ -9,15 +9,15 @@ source = None
 # errata = security,bugfix,enhancement,ALL
 errata = ALL
 
-[aegon-rhel-4.9-as-base-x86_64]
+[clone-rhel-4.9-as-base-x86_64]
 source = rhel-x86_64-as-4
 errata = ALL
 
-[aegon-rhel-5.6-server-base-x86_64]
+[clone-rhel-5.6-server-base-x86_64]
 source = rhel-x86_64-server-5
 errata = ALL
 
-[aegon-rhel-6.0-server-base-x86_64]
+[clone-rhel-6.0-server-base-x86_64]
 source = rhel-x86_64-server-6
 errata = ALL
 
