Added GPL headers to all files, plus docstrings where appropriate as part of release preparations.

--- a/templates/apiscript.template
+++ b/templates/apiscript.template
@@ -1,7 +1,28 @@
 #!/usr/bin/env python
-# template API script using the rhnapi python module
-# the module will need to be on your PYTHONPATH
-# or its parent directory added using sys.path.append
+# -*- coding: utf-8 -*-
+#
+# RHN/Spacewalk XMLRPC API script
+# ** delete as appropriate below **
+# requires the python-rhnapi and python-progressbar modules
+# requires the python-rhnapi module
+#
+# Copyright YEAR AUTHOR
+#
+# This file is part of spw-api-scripts
+#
+# spw-api-scripts is free software: you can redistribute it and/or modify it under
+# the terms of the GNU General Public License as published by the Free
+# Software Foundation, either version 2 of the License, or (at your option)
+# any later version.
+#
+# spw-api-scripts is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
+# for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with spw-api-scripts. If not, see http://www.gnu.org/licenses/.
+
 """
 API script template file.
 """
