--- a/templates/apiscript.template
+++ b/templates/apiscript.template
@@ -28,21 +28,30 @@ API script template file.
 """
 __author__ = "Your Name <email>"
 
-# standard library imports
+# --------------------- Python Standard Library Modules ---------------------- #
 import sys
 from optparse import OptionParser, OptionGroup
 
-# custom module imports
+# -------------------------- Custom Python Modules --------------------------- #
 import rhnapi
 
-# configuration variables. Probably okay, actually.
+# -------------------------- RHN API Configuration --------------------------- #
+
+# server hostname and config file location
 RHNCONFIG = '~/.rhninfo'
 RHNHOST = 'localhost'
+
+# authentication information
 # put these in your configfile, dammit;
 RHNUSER = None
 RHNPASS = None
 
-# --------------------------------------------------------------------------------- #
+
+# --------------------------- Script Configuration --------------------------- #
+# put global variables for the script in here
+
+# ---------------------------------------------------------------------------- #
+
 def parse_cmdline(argv):
     """
     process the commandline :)
@@ -52,9 +61,12 @@ def parse_cmdline(argv):
     # initialise our parser and set some default options
     parser = OptionParser(usage = usagestr, description = preamble)
     parser.add_option("--debug", action = "store_true", default = False,
-            help = "enable debug output for RHN session (XMLRPC errors etc")
+        help = "enable debug output for RHN session (XMLRPC errors etc.) Sets loglevel to DEBUG.")
     parser.add_option('-v', '--verbose', action = 'store_true', default = False,
-            help = "increase verbosity")
+        help = "increase verbosity. Sets loglevel to INFO")
+# this is not implemented in most scripts, but if you want it...    
+#    parser.add_option("-q", "--quiet", action = "store_true", default = False,
+#        help = "Disable all logging and output")
 
     # RHN Satellite options group
     rhngrp = OptionGroup(parser, "RHN Satellite Options", "Defaults can be set in your RHN API config file (%s)" % RHNCONFIG )
@@ -62,11 +74,13 @@ def parse_cmdline(argv):
     rhngrp.add_option("--login", help="RHN login (username)" , default=RHNUSER)
     rhngrp.add_option("--pass", dest = "password", help="RHN password. This is better off in a config file.", default=RHNPASS)
     rhngrp.add_option("--config", dest = "config", help="Local RHN configuration file [ %default ]", default=RHNCONFIG)
-    rhngrp.add_option("-C", "--cache", action = "store_true", default = False,
+    rhngrp.add_option("--cache", action = "store_true", default = False,
         help = "save usernames and password in config file, if missing")
+    rhngrp.add_option("--log", dest = "logfile", default = None,
+        help = "log output to the given filename. If you enable logging without this, logs go to stderr")
     parser.add_option_group(rhngrp)
 
-    # script-specific options
+    # script-specific options - put these in their own OptionGroup
 
 
     if len(argv) == 0:
@@ -79,26 +93,44 @@ def parse_cmdline(argv):
     # finally...
     return opts, args
         
-# --------------------------------------------------------------------------------- #
+# ---------------------------------------------------------------------------- #
 
-if __name__ == '__main__':
-    
+
+def main():    
     opts, args = parse_cmdline(sys.argv[1:])
+    if opts.debug:
+        rhnloglevel = 10
+    elif opts.verbose:
+        rhnloglevel = 20
+    else:
+        rhnloglevel = 30
+
     # initialise an RHN Session
     # safety mechanism until the script actually works:
     print "This is under heavy development and is currenttly non-functional"
     sys.exit(0)
     try:
-        RHN = rhnapi.rhnSession(opts.server, opts.login, opts.password, config=opts.config, cache_creds=opts.cache, debug=opts.debug)
-        # handle debugging requests
+        RHN = rhnapi.rhnSession(opts.server, opts.login, opts.password,
+                                config=opts.config, savecreds=opts.cache, debug=opts.debug,
+                                logfile = opts.logfile, logenable = True,
+                                logname = os.path.basename(sys.argv[0]), loglevel=rhnloglevel,
+                                )
+        # did we give the --verbose switch?
+        if opts.verbose:
+            RHN.enableVerbose()
+
+        # debug dials up the logging some more
         if opts.debug:
             RHN.enableDebug()
         # DO STUFF with your RHN session and commandline options
     except KeyboardInterrupt:
         print "Operation cancelled by keystroke."
         sys.exit(1)
+    
+if __name__ == '__main__':
+    main()
 
 
-    
-    
-    
+
+# footer - do not edit below here
+# vim: set et ai smartindent ts=4 sts=4 sw=4 ft=python:
