UPDATE: setup.cfg now refers to README.rst (not README.scripts)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [bdist_rpm]
 release = 1
 packager = Stuart Sears <sjs@redhat.com>
-requires = python-rhnapi > 5.4
+requires = python-rhnapi > 5.4, python-progressbar
 group    = Applications/RHN
-doc_files = templates/ README.scripts
+doc_files = templates/ README.rst
 
 
