--- a/templates/apiscript.template
+++ b/templates/apiscript.template
@@ -29,6 +29,7 @@ API script template file.
 __author__ = "Your Name <email>"
 
 # --------------------- Python Standard Library Modules ---------------------- #
+import os
 import sys
 from optparse import OptionParser, OptionGroup
 
@@ -56,17 +57,30 @@ def parse_cmdline(argv):
     """
     process the commandline :)
     """
-    preamble = "A short desrciption of what the script does. Will appear in --help output."
+    def error(errlines, exitcode = 1):
+        """
+        parser-specific error handling
+        params:
+        errlines(list)      - list (or tuple/set) of lines in error message
+        exitcode(int)       - return code for exit statement.
+        """
+        print "\n".join(errlines)
+        parser.print_help()
+        sys.exit(exitcode)
+
+    preamble = """A short desrciption of what the script does. Will appear in --help output."""
+
     usagestr = "%prog [RHNOPTS]"
+    
     # initialise our parser and set some default options
     parser = OptionParser(usage = usagestr, description = preamble)
     parser.add_option("--debug", action = "store_true", default = False,
         help = "enable debug output for RHN session (XMLRPC errors etc.) Sets loglevel to DEBUG.")
     parser.add_option('-v', '--verbose', action = 'store_true', default = False,
         help = "increase verbosity. Sets loglevel to INFO")
-# this is not implemented in most scripts, but if you want it...    
-#    parser.add_option("-q", "--quiet", action = "store_true", default = False,
-#        help = "Disable all logging and output")
+    # this is not implemented in most scripts, but if you want it, remember to handle it below in main()
+    # parser.add_option("-q", "--quiet", action = "store_true", default = False,
+    #   help = "Disable all logging and output")
 
     # RHN Satellite options group
     rhngrp = OptionGroup(parser, "RHN Satellite Options", "Defaults can be set in your RHN API config file (%s)" % RHNCONFIG )
@@ -81,8 +95,13 @@ def parse_cmdline(argv):
     parser.add_option_group(rhngrp)
 
     # script-specific options - put these in their own OptionGroup
+    # e.g.
+    # mygrp = OptionGroup(parser, "Description of group")
+    # mygrp.add_option("-x", "--example", help="example option")
+    # parser.add_option_group(mygrp)
 
 
+    # by default
     if len(argv) == 0:
         parser.print_help()
         sys.exit(0)
@@ -96,8 +115,9 @@ def parse_cmdline(argv):
 # ---------------------------------------------------------------------------- #
 
 
-def main():    
-    opts, args = parse_cmdline(sys.argv[1:])
+def main(argv):    
+    opts, args = parse_cmdline(argv[1:])
+
     if opts.debug:
         rhnloglevel = 10
     elif opts.verbose:
@@ -105,15 +125,11 @@ def main():
     else:
         rhnloglevel = 30
 
-    # initialise an RHN Session
-    # safety mechanism until the script actually works:
-    print "This is under heavy development and is currenttly non-functional"
-    sys.exit(0)
     try:
         RHN = rhnapi.rhnSession(opts.server, opts.login, opts.password,
                                 config=opts.config, savecreds=opts.cache, debug=opts.debug,
                                 logfile = opts.logfile, logenable = True,
-                                logname = os.path.basename(sys.argv[0]), loglevel=rhnloglevel,
+                                logname = os.path.basename(argv[0]), loglevel=rhnloglevel,
                                 )
         # did we give the --verbose switch?
         if opts.verbose:
@@ -128,7 +144,7 @@ def main():
         sys.exit(1)
     
 if __name__ == '__main__':
-    main()
+    main(sys.argv)
 
 
 
