--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,21 @@
+[sdist]
+formats = gztar,zip
+
 [bdist_rpm]
-release = 1
-packager = Stuart Sears <sjs@redhat.com>
-requires = python-rhnapi > 5.4, python-progressbar
+release = 2
+packager = Stuart Sears <stuart.sears@man.com>
+# for RHEL5, anyway
+requires = python-rhnapi > 5.4, python-progressbar, python-simplejson
 group    = Applications/RHN
-doc_files = templates/ README.rst
+doc_files = templates/ README.rst README.scripts ChangeLog GPL.txt
 
+changelog = 
+    * Fri Apr 26 2013 Stuart Sears <stuart.sears@man.com>
+    - updated to latest git version
+    - moved to new Makefile-based build system
+    - included License and git-based changelog
+    - add simplejson dependency for JSON support
 
+    * Thu Dec 06 2012 Stuart Sears <stuart.sears@man.com>
+    - finally added an RPM changelog :)
+    - many script updates, git log should show them
