--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 formats = gztar,zip
 
 [bdist_rpm]
-release = 2
+release = 3
 packager = Stuart Sears <stuart.sears@man.com>
 # for RHEL5, anyway
 requires = python-rhnapi > 5.4, python-progressbar, python-simplejson
@@ -10,6 +10,18 @@ group    = Applications/RHN
 doc_files = templates/ README.rst README.scripts ChangeLog GPL.txt
 
 changelog = 
+    * Wed Jul 03 2013 Stuart Sears <stuart.sears@man.com>
+    - updated spw-kickstart-import 
+      handle existing kickstart trees
+      fixed errors in crypto key import
+      added template support to script import
+      updated logging to more appropriate levels
+    - updated spw-kickstart-export:
+      now properly handles export of kickstart distributions
+
+    * Mon Jul 01 2013 Stuart Sears <stuart.sears@man.com>
+    - fixed missing else section in spw-kickstart-import
+
     * Fri Apr 26 2013 Stuart Sears <stuart.sears@man.com>
     - updated to latest git version
     - moved to new Makefile-based build system
