updated RPM changelog and Makefile targets

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 formats = gztar,zip
 
 [bdist_rpm]
-release = 3
+release = 4
 packager = Stuart Sears <stuart.sears@man.com>
 # for RHEL5, anyway
 requires = python-rhnapi > 5.4, python-progressbar, python-simplejson
@@ -10,6 +10,13 @@ group    = Applications/RHN
 doc_files = templates/ README.rst README.scripts ChangeLog GPL.txt
 
 changelog = 
+    * Mon Oct 14 2013 Stuart Sears <stuart.sears@man.com>
+    - several new scripts, including
+      spw-channel-import-errata
+      spw-channel-sync-by-errata
+      spw-system-listinactive
+    - various bugfixes and other changes
+
     * Wed Jul 03 2013 Stuart Sears <stuart.sears@man.com>
     - updated spw-kickstart-import 
       handle existing kickstart trees
