New setup.cfg dependency changes for RHEL6 / python 2.6+

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,8 @@ formats = gztar,zip
 release = 4
 packager = Stuart Sears <stuart.sears@man.com>
 # for RHEL5, anyway
-requires = python-rhnapi > 5.4, python-progressbar, python-simplejson, python-pycurl
+# requires = python-rhnapi > 5.4, python-progressbar, python-simplejson, python-pycurl
+requires = python-rhnapi > 5.4, python-progressbar, python-pycurl
 group    = Applications/RHN
 doc_files = templates/ README.rst README.scripts ChangeLog GPL.txt
 
