Updated setup.cfg with latest changelog and bumped release

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 formats = gztar,zip
 
 [bdist_rpm]
-release = 4
+release = 5
 packager = Stuart Sears <stuart.sears@man.com>
 # for RHEL5, anyway
 requires = python-rhnapi > 5.4, python-progressbar, python-simplejson, python-pycurl
@@ -10,6 +10,11 @@ group    = Applications/RHN
 doc_files = templates/ README.rst README.scripts ChangeLog GPL.txt
 
 changelog = 
+    * Tue Oct 22 2013 Stuart Sears <stuart.sears@man.com>
+    - new script spw-channel-download
+    - build system updates
+      
+
     * Mon Oct 14 2013 Stuart Sears <stuart.sears@man.com>
     - several new scripts, including
       spw-channel-import-errata
